--- a/1.md
+++ b/1.md
@@ -10,9 +10,9 @@
 
 ## Para perguntas do tipo:
 
-* - "#questão Questão ITA etc."
-* - "#resolução é de tal jeito"
-* - "#livros FME.pdf"
-* - "#dica resolver por briott ruffini"
-* - "#video do boaro de cinemática"
+- "#questão Questão ITA etc."
+- "#resolução é de tal jeito"
+- "#livros FME.pdf"
+- "#dica resolver por briott ruffini"
+- "#video do boaro de cinemática"
 
